# Mac-Health-Analyzer

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SCALING.md  TESTING.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  docker-compose.yml  docker-run.sh  main.py  process_monitor.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.sh  run_tests.py  run_tests.sh  startup_manager.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
docker/: entrypoint.sh  supervisord.conf
scripts/: run.sh  run_tests.py  run_tests.sh
src/: main.py  process_monitor.py  startup_manager.py
src/ui/: animations.py  charts.py  dashboard.py  fonts.py  process_detail_dialog.py  processes_tab.py  startup_detail_dialog.py  startup_guide.py  startup_tab.py  styles.py  widgets.py
src/utils/: helpers.py  process_descriptions.py  startup_descriptions.py  system_info.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_managers.py
tests/ui/: test_animations.py  test_charts.py  test_dashboard.py  test_dialogs.py  test_fonts.py  test_main.py  test_processes_tab.py  test_startup_guide.py  test_startup_tab.py  test_styles.py  test_widgets.py
tests/unit/: __init__.py  test_helpers.py  test_process_descriptions.py  test_process_monitor.py  test_startup_descriptions.py  test_startup_manager.py  test_system_info.py
ui/: animations.py  charts.py  dashboard.py  fonts.py  process_detail_dialog.py  processes_tab.py  startup_detail_dialog.py  startup_guide.py  startup_tab.py  styles.py  widgets.py
utils/: helpers.py  process_descriptions.py  startup_descriptions.py  system_info.py
